deploy: 9bd180faac8aa0ed36f74cc0e142e03344ef1891

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Calcurus-wasm</title>
     <base href="/Calcurus/" />
-<link rel="modulepreload" href="/Calcurus/Calcurus-436935d6a81819e8.js" crossorigin="anonymous" integrity="sha384-e5HpTC8mRmsWjoZwKEsfnHnvXUYtXDwfvX841BeDGTFV4AUOny7/d6kLmzdenkS0"><link rel="preload" href="/Calcurus/Calcurus-436935d6a81819e8_bg.wasm" crossorigin="anonymous" integrity="sha384-PyE0X+CPvZfI5Yf9l5RvxA3vmbGSdy8mD0rHvWS5criSDQPtsr36+NfHE9Kqq/BB" as="fetch" type="application/wasm"></head>
+    <link rel="icon" href="/Calcurus/Calcurus1_1000-257f1d347110c79e.svg" integrity="sha384-9CVIvkZnnCdiI91Qc3TLOdGXNhIq+5ilEEx6F+B6szpcCjWgVLtgIfTzMkoLAx6s"/>
+<link rel="modulepreload" href="/Calcurus/Calcurus-c3b06e4091b14e14.js" crossorigin="anonymous" integrity="sha384-F1PNiLL7rExf/rWrZKkxEEYqavFTHu/FThUSL87ZWg1dY0VJVEVHsHPorQ49mId5"><link rel="preload" href="/Calcurus/Calcurus-c3b06e4091b14e14_bg.wasm" crossorigin="anonymous" integrity="sha384-RHyI2qZdoB8kOzH+RtKl/Qjlf9QRvBhak6wzv6AaAhrKbljaQJcGHyFKCzvDRaBI" as="fetch" type="application/wasm"></head>
 <body style="margin: 0; padding: 0; width: 100%; height: 100svh">
 
 <script type="module">
-import init, * as bindings from '/Calcurus/Calcurus-436935d6a81819e8.js';
-const wasm = await init({ module_or_path: '/Calcurus/Calcurus-436935d6a81819e8_bg.wasm' });
+import init, * as bindings from '/Calcurus/Calcurus-c3b06e4091b14e14.js';
+const wasm = await init({ module_or_path: '/Calcurus/Calcurus-c3b06e4091b14e14_bg.wasm' });
 
 
 window.wasmBindings = bindings;
